package cn.wjb114514.Adapter.ObjectAdapter;

public class Voltage220V {
    public int output220V() {
        int src = 220;
        System.out.println("电压为" + src + "volt");
        return src;
    }
}
